real-estate/result-logs-2025-05-16T18-48-37-635Z.txt
  File "//data/transformations/algorithm", line 57
    pip install requests pandas scikit-learn
        ^^^^^^^
SyntaxError: invalid syntax
